Mon Dec 30 16:27:00 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* freetds.spec.in: applied patch from David Hollis

Sat Dec 28 21:22:23 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c src/tds/token.c:
	- improve documentation

Sat Dec 28 20:50:11 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/tds/config.c src/tds/locale.c:
	* src/tds/mem.c:
	- rename TDSLOCINFO with TDSLOCALE
	* src/apps/tsql.c: remove old FIXME

Sat Dec 28 12:33:05 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* TODO:
	- update
	* include/tds.h:
	- update doc
	* src/ctlib/ct.c:
	- fix crash with CS_SEND_DATA_MSG
	* src/ctlib/unittests/t0009.c:
	- improve

Thu Dec 26 17:48:41 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: add small troubeshooting section
	* include/tds.h src/tds/token.c:
	- define some new token, ignore ORDERBY2 token

Wed Dec 25 12:19:06 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/pool/stream.c src/server/server.c:
	* src/tds/login.c src/tds/query.c src/tds/token.c:
	- renamed some token according to Sybase doc

Sun Dec 22 15:08:04 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/pool/stream.c src/server/server.c:
	* src/tds/token.c:
	- rename TDS_COL_INFO_TOKEN to TDS_COLFMT_TOKEN
	- added TDS_TABNAME_TOKEN and TDS_COLINFO_TOKEN and skip 
	  them (so FOR BROWSE query work)

Sun Dec 22 12:32:17 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am configure.in win32/Makefile.am (added):
	* win32/msvc6/Makefile.am (added):
	- add win32 project to distribution

Sat Dec 21 15:08:08 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: updated a bit

Fri Dec 20 22:51:40 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/tsql.c src/ctlib/cs.c src/dblib/dblib.c:
	- use %I instead of %l for strftime (portability problem)
